fixed the alignment of the select box

--- a/src/index.css
+++ b/src/index.css
@@ -72,11 +72,16 @@ body, .app {
   background-color: white;
   border-radius: 15px;
   margin: 10px;
+  position: relative;
 }
 
 
 .book-info-container {
   width: 225px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .book-img {
@@ -130,13 +135,13 @@ body, .app {
   linear-gradient(45deg, transparent 50%, gray 50%),
   linear-gradient(135deg, gray 50%, transparent 50%),
   linear-gradient(to right, #ccc, #ccc);
-background-position:
+  background-position:
   calc(100% - 20px) calc(1em + 2px),
   calc(100% - 15px) calc(1em + 2px),
   calc(100% - 2.5em) 0.5em;
-background-size:
+  background-size:
   5px 5px,
   5px 5px,
   1px 1.5em;
-background-repeat: no-repeat;
+  background-repeat: no-repeat;
 }
